# MediNodus

./: .gitignore  001_initial.sql  README.md  docker-compose.yml  main.py  pyproject.toml  setup.md
backend/: .env.example  medgemma.py  requirements.txt  test_services.py
backend/app/: config.py  data_provider.py  database.py  main.py
backend/app/core/: config.py
backend/app/models/: account.py  medical_history_entry.py  medical_record.py  medical_report.py  profile.py  user.py
backend/app/routers/: auth.py  profiles.py
backend/app/schemas/: ai_response_schema.py  auth_schema.py  medical_report.py  report_schema.py
backend/app/services/: ai_service.py  auth_service.py  fda_service.py  image_service.py  llm_service.py  ocr_service.py  pipeline.py  report_service.py  text_cleaner.py
backend/app/utils/: security.py
docs/: API_SHAPE.md  CONTEXT.md  progress.md
frontend/: package-lock.json
frontend/app/: _layout.tsx
frontend/app/(auth)/: login.tsx  register.tsx
frontend/app/(tabs)/: _layout.tsx  ai.tsx  dashboard.tsx  medications.tsx  records.tsx  telemetry.tsx
frontend/app/profile/: [id].tsx  create.tsx  link.tsx
frontend/components/: ScreenContainer.tsx
mobile/: package-lock.json  package.json
mobile/app/: _layout.tsx  profile.tsx  scan.tsx
mobile/components/: themed-view.tsx
mobile/constants/: theme.ts
mobile/context/: GlobalStateContext.tsx
mobile/hooks/: use-theme-color.ts
mobile/services/: api.ts  auth.ts
scripts/: apply_migration.py
supabase/: config.toml
tools/supabase/: package-lock.json  package.json  run.sh
(+17 files in other folders)
